# ska-pst-dsp-model

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  README.rst  activate_matlab_runtime  all_sgcht.bash  at3_565_round_pfb_io.sh  channelize  channelize.m  compare_dump_files.m  complex_sinusoid.m  generate_test_vector.m  normalize.m  pad_filter.m  pipeline.m  polyphase_analysis.m  polyphase_analysis_alt.m  polyphase_synthesis.m  polyphase_synthesis_alt.m  pyproject.toml  read_dada_file.m  readme.txt  save_file.m  single_double_fft.m  struct2map.m  synthesize.m  test.m  test_data_pipeline.m  time_domain_impulse.m  write_dada_file.m  write_header.m
config/: PST_filtertaps.txt  Prototype_FIR.120.mat  (+23 more)
python/: compare_dump_files.py  config.py  data_gen.py  fft_impulse_response.py  iter_test_vectors.py  modulefiles  plot_binary_file.py  plot_dada_file.py  plot_purity_results.py  process_test_vectors.py  pulsar_params.json  pyproject.toml  run_dspsr_with_dump.py  simulated_pulsar.noise_0.0.nseries_3.ndim_2-channelize.256.4-3.out  simulated_pulsar.noise_0.0.nseries_3.ndim_2-channelize.256.4-3.txt  simulated_pulsar.noise_0.0.nseries_3.ndim_2-channelize.8.8-7.out  simulated_pulsar.noise_0.0.nseries_3.ndim_2-channelize.8.8-7.txt  simulated_pulsar.noise_0.0.nseries_3.ndim_2.dump-channelize.256.4-3.out  simulated_pulsar.noise_0.0.nseries_3.ndim_2.dump-channelize.256.4-3.txt  single_double_fft.py  test_operator_result.json  util.py
python/data_gen/: __init__.py  channelize.py  config.py  dispose.py  dspsr_util.py  generate_test_vector.py  pipeline.py  run_dspsr_with_dump.py  synthesize.py  util.py
python/test/: channelize.256.4-3.txt  channelize.8.4-3.txt  channelize.8.8-7.txt  psrdiff.txt  simulated_pulsar.noise_0.0.nseries_3.ndim_2.dump.txt  simulated_pulsar.noise_0.0.nseries_3.ndim_2.txt  test_backends.py  test_data_gen.py  test_dedispersion.py  test_dispose.py  test_dspsr_util.py  test_matlab_dspsr_pfb_inversion.py  test_purity.py  test_util.py  util.py
python/test/test_data/: psrdiff.out
python/verify/: common.py  purity.py  test_backends.py  test_dedispersion.py  test_matlab_dspsr_pfb_inversion.py  test_purity.py  util.py  verify_dspsr_pfb_inversion.py
(+139 files in other folders)
