[tool.poetry]
name = "PST_Matlab_dspsr_PFB_inversion_comparison"
version = "0.1.0"
description = ""
authors = ["Dean Shaff <dshaff@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.0"
numpy = "^1.16"
scipy = "^1.2"
numba = "^0.42.1"
comparator = {git = "git@github.com:dean-shaff/comparator.git"}
pfb = {git = "git@github.com:dean-shaff/pfb.git"}
psr-formats = {git = "git@github.com:dean-shaff/psr-formats.git"}

[tool.poetry.dev-dependencies]
ipython = "^7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
