[tool.poetry]
name = "PST_PFB_inversion_verification"
version = "0.6.1"
description = ""
authors = ["Dean Shaff <dshaff@swin.edu.au>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.0"
numpy = "^1.16"
scipy = "^1.2"
comparator = {git = "https://github.com/dean-shaff/comparator.git"}
pfb = {git = "https://github.com/dean-shaff/pfb.git"}
psr-formats = {git = "https://gitlab.com/dean-shaff/psr-formats.git"}
partialize = {git = "https://github.com/dean-shaff/partialize.git"}
dspsr-test = {git = "https://gitlab.com/ska-telescope/dspsr-test"}
tqdm = "^4.32"

[tool.poetry.dev-dependencies]
ipython = "^7.4"
sphinx = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
